--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -138,129 +138,7 @@
           <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
         </div>
         <div id="crt" class="row">
-          <!-- <div class="col-lg-4 col-md-6 col-12 g-3">
-              <div class="boxing">
-                <div class="container">
-                  <div class="peple">
-                    <a href="#">
-                      <img src="https://metanft.hasnaanajmi.org/images/avatars/1.jpg" alt="">
-                    </a>
-                    <a href="#">
-                      <h4>Abstract painting</h4>
-                    </a>
-                    <div class="heart">
-                      <a href="#"><i class="fa-solid fa-heart"></i>142</a>
-                    </div>
-                  </div>
-                  <div class="all" style="padding:10px 0px">
-                    <div class="row">
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/1.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/2.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/3.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/4.jpg" alt="">
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12 g-3">
-              <div class="boxing">
-                <div class="container">
-                  <div class="peple">
-                    <a href="#">
-                      <img src="https://metanft.hasnaanajmi.org/images/avatars/1.jpg" alt="">
-                    </a>
-                    <a href="#">
-                      <h4>Modern Art</h4>
-                    </a>
-                    <div class="heart">
-                      <a href="#"><i class="fa-solid fa-heart"></i>128</a>
-                    </div>
-                  </div>
-                  <div class="all" style="padding:10px 0px">
-                    <div class="row">
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/5.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/6.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/7.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/8.jpg" alt="">
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-12 g-3">
-              <div class="boxing">
-                <div class="container">
-                  <div class="peple">
-                    <a href="#">
-                      <img src="https://metanft.hasnaanajmi.org/images/avatars/1.jpg" alt="">
-                    </a>
-                    <a href="#">
-                      <h4>Wallpapers Figure</h4>
-                    </a>
-                    <div class="heart">
-                      <a href="#"><i class="fa-solid fa-heart"></i>178</a>
-                    </div>
-                  </div>
-                  <div class="all" style="padding:10px 0px">
-                    <div class="row">
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/9.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/10.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/11.jpg" alt="">
-                        </a>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-6 g-2">
-                        <a class="img" href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/collections/12.jpg" alt="">
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-          </div> -->
+        
         </div>
       </div>
     </section>
@@ -392,313 +270,10 @@
       <div class="container">
         <div class="text">
           <h3>Discover NTFs</h3>
-          <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
+          
         </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6 g-3">
-              <div class="boxing">
-                <div class="all">
-                  <div class="img">
-                    <a href="#">
-                      <img src="https://hasnaanajmi.com/env/Metanft/images/bid/1.jpg" alt="">
-                    </a>
-                    <div class="heart">
-                      <a href="#"><i class="fa-regular fa-heart"></i></a>
-                    </div>
-                    <a class="abid" href="#">Place a bid</a>
-                  </div>
-                  <div class="nft_box">
-                    <div class="nft_titlewrap">
-                        <h3>
-                            <a href="#">3D Illustration</a>
-                        </h3>
-                          <i class="fa-solid fa-fire"></i>
-                    </div>
-                    <div class="nft_wordlife">
-                        <div class="nft_box_user">
-                            <div class="nft_img">
-                                <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/2.jpg" alt="">
-                                <div class="nft_name">
-                                    <span>Creator</span>
-                                    <h4>@Sinanart</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="nft_price">
-                            <span>Current Bid</span>
-                            <h4>4.07 ETH</h4>
-                        </div>
-                    </div>
-                </div>
-                </div>
-              </div>
-          </div>
-          <div class="col-lg-4 col-md-6 g-3">
-              <div class="boxing">
-                <div class="all">
-                  <div class="img">
-                    <a href="#">
-                      <img src="https://hasnaanajmi.com/env/Metanft/images/bid/2.jpg" alt="">
-                    </a>
-                    <div class="heart">
-                      <a href="#"><i class="fa-regular fa-heart"></i></a>
-                    </div>
-                    <a class="abid" href="#">Place a bid</a>
-                  </div>
-                  <div class="nft_box">
-                    <div class="nft_titlewrap">
-                        <h3>
-                            <a href="#">Purple Leaf</a>
-                        </h3>
-                          <i class="fa-solid fa-fire"></i>
-                    </div>
-                    <div class="nft_wordlife">
-                        <div class="nft_box_user">
-                            <div class="nft_img">
-                                <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/3.jpg" alt="">
-                                <div class="nft_name">
-                                    <span>Creator</span>
-                                    <h4>@Yassirart</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="nft_price">
-                            <span>Current Bid</span>
-                            <h4>1.00 ETH</h4>
-                        </div>
-                    </div>
-                </div>
-                </div>
-              </div>
-          </div>
-          <div class="col-lg-4 col-md-6 g-3">
-            <div class="boxing">
-              <div class="all">
-                <div class="img">
-                  <a href="#">
-                    <img src="https://hasnaanajmi.com/env/Metanft/images/bid/3.jpg" alt="">
-                  </a>
-                  <div class="heart">
-                    <a href="#"><i class="fa-regular fa-heart"></i></a>
-                  </div>
-                  <a class="abid" href="#">Place a bid</a>
-                </div>
-                <div class="nft_box">
-                  <div class="nft_titlewrap">
-                      <h3>
-                          <a href="#">Women Portrait</a>
-                      </h3>
-                        <i class="fa-solid fa-fire"></i>
-                  </div>
-                  <div class="nft_wordlife">
-                      <div class="nft_box_user">
-                          <div class="nft_img">
-                              <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/4.jpg" alt="">
-                              <div class="nft_name">
-                                  <span>Creator</span>
-                                  <h4>@studioart</h4>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="nft_price">
-                          <span>Current Bid</span>
-                          <h4>3.09 ETH</h4>
-                      </div>
-                  </div>
-              </div>
-              </div>
-            </div>
-        </div>
-          <div class="col-lg-4 col-md-6 g-3">
-            <div class="boxing">
-              <div class="all">
-                <div class="img">
-                  <a href="#">
-                    <img src="https://hasnaanajmi.com/env/Metanft/images/bid/4.jpg" alt="">
-                  </a>
-                  <div class="heart">
-                    <a href="#"><i class="fa-regular fa-heart"></i></a>
-                  </div>
-                  <a class="abid" href="#">Place a bid</a>
-                </div>
-                <div class="nft_box">
-                  <div class="nft_titlewrap">
-                      <h3>
-                          <a href="#">Berries Art</a>
-                      </h3>
-                        <i class="fa-solid fa-fire"></i>
-                  </div>
-                  <div class="nft_wordlife">
-                      <div class="nft_box_user">
-                          <div class="nft_img">
-                              <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/1.jpg" alt="">
-                              <div class="nft_name">
-                                  <span>Creator</span>
-                                  <h4>@Yomnaart</h4>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="nft_price">
-                          <span>Current Bid</span>
-                          <h4>2.04 ETH</h4>
-                      </div>
-                  </div>
-              </div>
-              </div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6 g-3">
-          <div class="boxing">
-            <div class="all">
-              <div class="img">
-                <a href="#">
-                  <img src="https://hasnaanajmi.com/env/Metanft/images/bid/5.jpg" alt="">
-                </a>
-                <div class="heart">
-                  <a href="#"><i class="fa-regular fa-heart"></i></a>
-                </div>
-                <a class="abid" href="#">Place a bid</a>
-              </div>
-              <div class="nft_box">
-                <div class="nft_titlewrap">
-                    <h3>
-                        <a href="#">3D Model</a>
-                    </h3>
-                      <i class="fa-solid fa-fire"></i>
-                </div>
-                <div class="nft_wordlife">
-                    <div class="nft_box_user">
-                        <div class="nft_img">
-                            <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/6.jpg" alt="">
-                            <div class="nft_name">
-                                <span>Creator</span>
-                                <h4>@Yaraartist</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="nft_price">
-                        <span>Current Bid</span>
-                        <h4>7.12 ETH</h4>
-                    </div>
-                </div>
-            </div>
-            </div>
-          </div>
-      </div>
-      <div class="col-lg-4 col-md-6 g-3">
-        <div class="boxing">
-          <div class="all">
-            <div class="img">
-              <a href="#">
-                <img src="https://hasnaanajmi.com/env/Metanft/images/bid/6.jpg" alt="">
-              </a>
-              <div class="heart">
-                <a href="#"><i class="fa-regular fa-heart"></i></a>
-              </div>
-              <a class="abid" href="#">Place a bid</a>
-            </div>
-            <div class="nft_box">
-              <div class="nft_titlewrap">
-                  <h3>
-                      <a href="#">Colorful Leaf</a>
-                  </h3>
-                    <i class="fa-solid fa-fire"></i>
-              </div>
-              <div class="nft_wordlife">
-                  <div class="nft_box_user">
-                      <div class="nft_img">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/7.jpg" alt="">
-                          <div class="nft_name">
-                              <span>Creator</span>
-                              <h4>@dreamart</h4>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="nft_price">
-                      <span>Current Bid</span>
-                      <h4>5.07 ETH</h4>
-                  </div>
-              </div>
-          </div>
-          </div>
-        </div>
-    </div>
-    <div class="col-lg-4 col-md-6 g-3">
-      <div class="boxing">
-        <div class="all">
-          <div class="img">
-            <a href="#">
-              <img src="https://hasnaanajmi.com/env/Metanft/images/bid/7.jpg" alt="">
-            </a>
-            <div class="heart">
-              <a href="#"><i class="fa-regular fa-heart"></i></a>
-            </div>
-            <a class="abid" href="#">Place a bid</a>
-          </div>
-          <div class="nft_box">
-            <div class="nft_titlewrap">
-                <h3>
-                    <a href="#">Colorful Paint</a>
-                </h3>
-                  <i class="fa-solid fa-fire"></i>
-            </div>
-            <div class="nft_wordlife">
-                <div class="nft_box_user">
-                    <div class="nft_img">
-                        <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/14.jpg" alt="">
-                        <div class="nft_name">
-                            <span>Creator</span>
-                            <h4>@Leilaart</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="nft_price">
-                    <span>Current Bid</span>
-                    <h4>4.07 ETH</h4>
-                </div>
-            </div>
-        </div>
-        </div>
-      </div>
-  </div>
-  <div class="col-lg-4 col-md-6 g-3">
-    <div class="boxing">
-      <div class="all">
-        <div class="img">
-          <a href="#">
-            <img src="https://hasnaanajmi.com/env/Metanft/images/bid/11.jpg" alt="">
-          </a>
-          <div class="heart">
-            <a href="#"><i class="fa-regular fa-heart"></i></a>
-          </div>
-          <a class="abid" href="#">Place a bid</a>
-        </div>
-        <div class="nft_box">
-          <div class="nft_titlewrap">
-              <h3>
-                  <a href="#">Multicolor Illustration</a>
-              </h3>
-                <i class="fa-solid fa-fire"></i>
-          </div>
-          <div class="nft_wordlife">
-              <div class="nft_box_user">
-                  <div class="nft_img">
-                      <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/8.jpg" alt="">
-                      <div class="nft_name">
-                          <span>Creator</span>
-                          <h4>@Simayart</h4>
-                      </div>
-                  </div>
-              </div>
-              <div class="nft_price">
-                  <span>Current Bid</span>
-                  <h4>2.47 ETH</h4>
-              </div>
-          </div>
-      </div>
-      </div>
-    </div>
-</div>
+        <div id="category" class="row">
+
         </div>
       </div>
     </section>
@@ -961,6 +536,7 @@
       </div>
     </div>
    </footer>
+   <script src="../src/js/app.js"></script>
    <script src="../src/js/index.js"></script>
    <script src="https://kit.fontawesome.com/610cd415f0.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
