--- a/Meta NFT/public/index2.html
+++ b/Meta NFT/public/index2.html
@@ -72,7 +72,7 @@
             </div>
     </header>
     <main>
-        <section id="art" style="background-image: url(	https://hasnaanajmi.com/env/Metanft/images/footer-animation-bg.svg);">
+        <section id="art" style="background-image: url(https://metanft.hasnaanajmi.org/images/footer-animation-bg.svg);">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 g-3">
@@ -255,311 +255,8 @@
                 <h3>Discover NTFs</h3>
                 <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
               </div>
-              <div class="row">
-                <div class="col-lg-4 g-3">
-                    <div class="boxing">
-                      <div class="all">
-                        <div class="img">
-                          <a href="#">
-                            <img src="https://hasnaanajmi.com/env/Metanft/images/bid/1.jpg" alt="">
-                          </a>
-                          <div class="heart">
-                            <a href="#"><i class="fa-regular fa-heart"></i></a>
-                          </div>
-                          <a class="abid" href="#">Place a bid</a>
-                        </div>
-                        <div class="nft_box">
-                          <div class="nft_titlewrap">
-                              <h3>
-                                  <a href="#">3D Illustration</a>
-                              </h3>
-                                <i class="fa-solid fa-fire"></i>
-                          </div>
-                          <div class="nft_wordlife">
-                              <div class="nft_box_user">
-                                  <div class="nft_img">
-                                      <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/2.jpg" alt="">
-                                      <div class="nft_name">
-                                          <span>Creator</span>
-                                          <h4>@Sinanart</h4>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="nft_price">
-                                  <span>Current Bid</span>
-                                  <h4>4.07 ETH</h4>
-                              </div>
-                          </div>
-                      </div>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 g-3">
-                    <div class="boxing">
-                      <div class="all">
-                        <div class="img">
-                          <a href="#">
-                            <img src="https://hasnaanajmi.com/env/Metanft/images/bid/2.jpg" alt="">
-                          </a>
-                          <div class="heart">
-                            <a href="#"><i class="fa-regular fa-heart"></i></a>
-                          </div>
-                          <a class="abid" href="#">Place a bid</a>
-                        </div>
-                        <div class="nft_box">
-                          <div class="nft_titlewrap">
-                              <h3>
-                                  <a href="#">Purple Leaf</a>
-                              </h3>
-                                <i class="fa-solid fa-fire"></i>
-                          </div>
-                          <div class="nft_wordlife">
-                              <div class="nft_box_user">
-                                  <div class="nft_img">
-                                      <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/3.jpg" alt="">
-                                      <div class="nft_name">
-                                          <span>Creator</span>
-                                          <h4>@Yassirart</h4>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="nft_price">
-                                  <span>Current Bid</span>
-                                  <h4>1.00 ETH</h4>
-                              </div>
-                          </div>
-                      </div>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 g-3">
-                  <div class="boxing">
-                    <div class="all">
-                      <div class="img">
-                        <a href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/bid/3.jpg" alt="">
-                        </a>
-                        <div class="heart">
-                          <a href="#"><i class="fa-regular fa-heart"></i></a>
-                        </div>
-                        <a class="abid" href="#">Place a bid</a>
-                      </div>
-                      <div class="nft_box">
-                        <div class="nft_titlewrap">
-                            <h3>
-                                <a href="#">Women Portrait</a>
-                            </h3>
-                              <i class="fa-solid fa-fire"></i>
-                        </div>
-                        <div class="nft_wordlife">
-                            <div class="nft_box_user">
-                                <div class="nft_img">
-                                    <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/4.jpg" alt="">
-                                    <div class="nft_name">
-                                        <span>Creator</span>
-                                        <h4>@studioart</h4>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="nft_price">
-                                <span>Current Bid</span>
-                                <h4>3.09 ETH</h4>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-                  </div>
-              </div>
-                <div class="col-lg-4 g-3">
-                  <div class="boxing">
-                    <div class="all">
-                      <div class="img">
-                        <a href="#">
-                          <img src="https://hasnaanajmi.com/env/Metanft/images/bid/4.jpg" alt="">
-                        </a>
-                        <div class="heart">
-                          <a href="#"><i class="fa-regular fa-heart"></i></a>
-                        </div>
-                        <a class="abid" href="#">Place a bid</a>
-                      </div>
-                      <div class="nft_box">
-                        <div class="nft_titlewrap">
-                            <h3>
-                                <a href="#">Berries Art</a>
-                            </h3>
-                              <i class="fa-solid fa-fire"></i>
-                        </div>
-                        <div class="nft_wordlife">
-                            <div class="nft_box_user">
-                                <div class="nft_img">
-                                    <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/1.jpg" alt="">
-                                    <div class="nft_name">
-                                        <span>Creator</span>
-                                        <h4>@Yomnaart</h4>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="nft_price">
-                                <span>Current Bid</span>
-                                <h4>2.04 ETH</h4>
-                            </div>
-                        </div>
-                    </div>
-                    </div>
-                  </div>
-              </div>
-              <div class="col-lg-4 g-3">
-                <div class="boxing">
-                  <div class="all">
-                    <div class="img">
-                      <a href="#">
-                        <img src="https://hasnaanajmi.com/env/Metanft/images/bid/5.jpg" alt="">
-                      </a>
-                      <div class="heart">
-                        <a href="#"><i class="fa-regular fa-heart"></i></a>
-                      </div>
-                      <a class="abid" href="#">Place a bid</a>
-                    </div>
-                    <div class="nft_box">
-                      <div class="nft_titlewrap">
-                          <h3>
-                              <a href="#">3D Model</a>
-                          </h3>
-                            <i class="fa-solid fa-fire"></i>
-                      </div>
-                      <div class="nft_wordlife">
-                          <div class="nft_box_user">
-                              <div class="nft_img">
-                                  <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/6.jpg" alt="">
-                                  <div class="nft_name">
-                                      <span>Creator</span>
-                                      <h4>@Yaraartist</h4>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="nft_price">
-                              <span>Current Bid</span>
-                              <h4>7.12 ETH</h4>
-                          </div>
-                      </div>
-                  </div>
-                  </div>
-                </div>
-            </div>
-            <div class="col-lg-4 g-3">
-              <div class="boxing">
-                <div class="all">
-                  <div class="img">
-                    <a href="#">
-                      <img src="https://hasnaanajmi.com/env/Metanft/images/bid/6.jpg" alt="">
-                    </a>
-                    <div class="heart">
-                      <a href="#"><i class="fa-regular fa-heart"></i></a>
-                    </div>
-                    <a class="abid" href="#">Place a bid</a>
-                  </div>
-                  <div class="nft_box">
-                    <div class="nft_titlewrap">
-                        <h3>
-                            <a href="#">Colorful Leaf</a>
-                        </h3>
-                          <i class="fa-solid fa-fire"></i>
-                    </div>
-                    <div class="nft_wordlife">
-                        <div class="nft_box_user">
-                            <div class="nft_img">
-                                <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/7.jpg" alt="">
-                                <div class="nft_name">
-                                    <span>Creator</span>
-                                    <h4>@dreamart</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="nft_price">
-                            <span>Current Bid</span>
-                            <h4>5.07 ETH</h4>
-                        </div>
-                    </div>
-                </div>
-                </div>
-              </div>
-          </div>
-          <div class="col-lg-4 g-3">
-            <div class="boxing">
-              <div class="all">
-                <div class="img">
-                  <a href="#">
-                    <img src="https://hasnaanajmi.com/env/Metanft/images/bid/7.jpg" alt="">
-                  </a>
-                  <div class="heart">
-                    <a href="#"><i class="fa-regular fa-heart"></i></a>
-                  </div>
-                  <a class="abid" href="#">Place a bid</a>
-                </div>
-                <div class="nft_box">
-                  <div class="nft_titlewrap">
-                      <h3>
-                          <a href="#">Colorful Paint</a>
-                      </h3>
-                        <i class="fa-solid fa-fire"></i>
-                  </div>
-                  <div class="nft_wordlife">
-                      <div class="nft_box_user">
-                          <div class="nft_img">
-                              <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/14.jpg" alt="">
-                              <div class="nft_name">
-                                  <span>Creator</span>
-                                  <h4>@Leilaart</h4>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="nft_price">
-                          <span>Current Bid</span>
-                          <h4>4.07 ETH</h4>
-                      </div>
-                  </div>
-              </div>
-              </div>
-            </div>
-        </div>
-        <div class="col-lg-4 g-3">
-          <div class="boxing">
-            <div class="all">
-              <div class="img">
-                <a href="#">
-                  <img src="https://hasnaanajmi.com/env/Metanft/images/bid/11.jpg" alt="">
-                </a>
-                <div class="heart">
-                  <a href="#"><i class="fa-regular fa-heart"></i></a>
-                </div>
-                <a class="abid" href="#">Place a bid</a>
-              </div>
-              <div class="nft_box">
-                <div class="nft_titlewrap">
-                    <h3>
-                        <a href="#">Multicolor Illustration</a>
-                    </h3>
-                      <i class="fa-solid fa-fire"></i>
-                </div>
-                <div class="nft_wordlife">
-                    <div class="nft_box_user">
-                        <div class="nft_img">
-                            <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/8.jpg" alt="">
-                            <div class="nft_name">
-                                <span>Creator</span>
-                                <h4>@Simayart</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="nft_price">
-                        <span>Current Bid</span>
-                        <h4>2.47 ETH</h4>
-                    </div>
-                </div>
-            </div>
-            </div>
-          </div>
-      </div>
+              <div id="category" class="row">
+
               </div>
             </div>
           </section>
@@ -755,10 +452,9 @@
           </div>
         </div>
        </footer>
+       <script src="../src/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/610cd415f0.js" crossorigin="anonymous"></script>
-<script src="../src/js/home.js"></script>
-<script src="../src/js/home2.js"></script>
 </body>
 </html>
