--- a/Meta NFT/public/index.html
+++ b/Meta NFT/public/index.html
@@ -270,7 +270,7 @@
       <div class="container">
         <div class="text">
           <h3>Discover NTFs</h3>
-          
+          <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
         </div>
         <div id="category" class="row">
 
