--- a/Meta NFT/public/index2.html
+++ b/Meta NFT/public/index2.html
@@ -106,129 +106,16 @@
             </div>
         </section>
         <section id="anime">
-            <div class="container">
-              <div class="text">
-                <h3>Trending</h3>
-                <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
-              </div>
-              <div class="row">
-                <div class="col-lg-4 g-3">
-                    <div class="boxing">
-                      <div class="all">
-                        <div class="img">
-                          <a href="#">
-                            <img src="https://hasnaanajmi.com/env/Metanft/images/bid/4.jpg" alt="">
-                          </a>
-                          <div class="heart">
-                            <a href="#"><i class="fa-regular fa-heart"></i></a>
-                          </div>
-                          <a class="abid" href="#">Place a bid</a>
-                        </div>
-                        <div class="nft_box">
-                          <div class="nft_titlewrap">
-                              <h3>
-                                  <a href="#">Berries Art</a>
-                              </h3>
-                                <i class="fa-solid fa-fire"></i>
-                          </div>
-                          <div class="nft_wordlife">
-                              <div class="nft_box_user">
-                                  <div class="nft_img">
-                                      <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/1.jpg" alt="">
-                                      <div class="nft_name">
-                                          <span>Creator</span>
-                                          <h4>@Yomnaart</h4>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="nft_price">
-                                  <span>Current Bid</span>
-                                  <h4>2.04 ETH</h4>
-                              </div>
-                          </div>
-                      </div>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 g-3">
-                    <div class="boxing">
-                      <div class="all">
-                        <div class="img">
-                          <a href="#">
-                            <img src="https://hasnaanajmi.com/env/Metanft/images/bid/1.jpg" alt="">
-                          </a>
-                          <div class="heart">
-                            <a href="#"><i class="fa-regular fa-heart"></i></a>
-                          </div>
-                          <a class="abid" href="#">Place a bid</a>
-                        </div>
-                        <div class="nft_box">
-                          <div class="nft_titlewrap">
-                              <h3>
-                                  <a href="#">3D Illustration</a>
-                              </h3>
-                                <i class="fa-solid fa-fire"></i>
-                          </div>
-                          <div class="nft_wordlife">
-                              <div class="nft_box_user">
-                                  <div class="nft_img">
-                                      <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/2.jpg" alt="">
-                                      <div class="nft_name">
-                                          <span>Creator</span>
-                                          <h4>@Sinanart</h4>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="nft_price">
-                                  <span>Current Bid</span>
-                                  <h4>4.07 ETH</h4>
-                              </div>
-                          </div>
-                      </div>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 g-3">
-                    <div class="boxing">
-                      <div class="all">
-                        <div class="img">
-                          <a href="#">
-                            <img src="https://hasnaanajmi.com/env/Metanft/images/bid/2.jpg" alt="">
-                          </a>
-                          <div class="heart">
-                            <a href="#"><i class="fa-regular fa-heart"></i></a>
-                          </div>
-                          <a class="abid" href="#">Place a bid</a>
-                        </div>
-                        <div class="nft_box">
-                          <div class="nft_titlewrap">
-                              <h3>
-                                  <a href="#">Purple Leaf</a>
-                              </h3>
-                                <i class="fa-solid fa-fire"></i>
-                          </div>
-                          <div class="nft_wordlife">
-                              <div class="nft_box_user">
-                                  <div class="nft_img">
-                                      <img src="https://hasnaanajmi.com/env/Metanft/images/avatars/3.jpg" alt="">
-                                      <div class="nft_name">
-                                          <span>Creator</span>
-                                          <h4>@Yassirart</h4>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="nft_price">
-                                  <span>Current Bid</span>
-                                  <h4>1.00 ETH</h4>
-                              </div>
-                          </div>
-                      </div>
-                      </div>
-                    </div>
-                </div>
-              </div>
+          <div class="container">
+            <div class="text">
+              <h3>Discover NTFs</h3>
+              <a href="#">Discover more<i class="fa-solid fa-angle-right"></i></a>
             </div>
-          </section>
+            <div id="categorys" class="row">
+
+            </div>
+          </div>
+        </section>
           <section id="bird">
             <div class="container">
                 <div class="row">
